Fix button overflow.

--- a/src/main/java/com/googlecode/mgwt/ui/client/widget/button/button.css
+++ b/src/main/java/com/googlecode/mgwt/ui/client/widget/button/button.css
@@ -5,7 +5,7 @@
 .mgwt-Button {
 	color: #454545;
 	text-shadow: 0 1px #fff;
-	display: inline;
+	display: inline-block;
 	position: relative;
 	padding: 9px 13px;
 	margin: 5px;
@@ -13,7 +13,6 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	font-size: 16px;
-	text-align: center;
 	background-color: #e5e9e8;
 	box-shadow: inset 0 1px #fff;
 	border: 1px solid #9daca9;
